# monorepo-polyglot

./: .eslintrc.json  .gitignore  CODEOWNERS  DOCKER_SETUP.md  README.md  SETUP_GUIDE.md  deploy.sh  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  setup-dev.sh  tsconfig.base.json
.github/workflows/: ci.yml  release.yml  team-boundaries.yml
apps/backend/analytics-service/: Cargo.toml  Dockerfile
apps/backend/analytics-service/src/: main.rs
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: DEVELOPMENT.md  README.md
docs/development/: README.md
docs/enterprise/: README.md
docs/local-deployment/: README.md
docs/production/: README.md
docs/security/: README.md
docs/team-development/: README.md
docs/team-isolation/: README.md
k8s/base/: configmap.yaml  database.yaml  ingress.yaml  namespace.yaml  secrets.yaml
k8s/haproxy/: haproxy-config.yaml  haproxy-deployment.yaml
k8s/istio/: destination-rule.yaml  gateway.yaml  namespace.yaml  virtual-service.yaml
k8s/jaeger/: jaeger-deployment.yaml
k8s/kong/: kong-config.yaml  kong-deployment.yaml
libs/api-client/: jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json
libs/boundaries/: project.json
libs/constants/: package.json  project.json
libs/resilience/: package.json  project.json  tsconfig.lib.json
libs/types/: package.json  project.json  rollup.config.cjs
libs/ui-components/: jest.config.ts  package.json  project.json  rollup.config.cjs
libs/utils/: package.json  (+1 more)
monitoring/: docker-compose.monitoring.yml
nginx/: nginx.conf
(+89 files in other folders)
